# begin-cli

./: .env.example  .gitignore  AGENT.md  CLAUDE.md  Cargo.toml  README-rust.md  README.md  RFC.md  eslint.config.js  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
docs/: CHAIN_ABSTRACTION_AUDIT.md  CLI_AUDIT.md  RFC_SUMMARY.md  moonpay-cli-analysis.md
skill/: SKILL.md  package.json
skills/: SKILL.md
skills/begin-discovery/: SKILL.md
skills/begin-mint/: SKILL.md
skills/begin-offline/: SKILL.md
skills/begin-staking/: SKILL.md
skills/begin-swap/: SKILL.md
skills/begin-wallet/: SKILL.md
src/: app.tsx  cli.tsx  index.ts  main.rs
src/chains/: cardano.rs  mod.rs
src/commands/: balance.rs  buy.tsx  import.rs  mod.rs  new_wallet.rs  receive.tsx  send.rs  sign.tsx  submit.tsx
src/commands/bitcoin/: balance.tsx  history.tsx  index.ts  send.tsx
src/commands/bridge/: index.tsx  orders.tsx  quote.tsx  status.tsx
src/commands/cardano/: balance.tsx  history.tsx  send.tsx  utxos.tsx
src/core/: balance.ts  history.ts  index.ts  mint.ts  send.ts  staking.ts  swap.ts  wallet.ts
src/lib/: address.ts  audit.ts  config.ts  errors.ts  index.ts  keystore.ts  mint.ts  output.ts  policy.ts  provider.ts  qr.ts  staking.ts  swap.ts  transaction.ts  wallet.ts
src/mcp/: server.ts
src/services/: blockfrost.ts  coingecko.ts  jupiter-swap.ts  jupiter.ts  market.ts  minswap.ts  nmkr.ts  xoswap.ts
src/ui/: mod.rs
src/wallet/: mod.rs
tests/: mcp.test.ts  mint.test.ts  stake.test.ts  swap.test.ts  wallet.test.ts
(+33 files in other folders)
